--- a/exercice/01-authpage/index.html
+++ b/exercice/01-authpage/index.html
@@ -4,26 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Monda:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
-      <div>
-        <h1>Sign in</h1>
-        <p>Sign in with your credentials to access</p>
-        <form>
-          <label for="email">email:</label>
-          <input type="text" id="email" name="email" />
-          <label for="password">password</label>
-          <input type="password" id="password" name="password" />
-          <button type="submit">Sign in</button>
-        </form>
-      </div>
-      <div>
+      <section>
+        <div>
+          <div class="trr">
+            <h1>Sign in</h1>
+            <p>Sign in with your credentials to access</p>
+          </div>
+          <form class="login-form">
+            <label for="email">email:</label>
+            <input type="text" id="email" name="email" /><br />
+            <label for="password">password</label>
+            <input type="password" id="password" name="password" /><br />
+            <button type="submit">Sign in</button>
+          </form>
+        </div>
+      </section>
+      <section class="gris">
         <img
-          src="images/signinimg.jpg"
+          src="images/undraw_access_account_re_8spm 1.png"
           alt="un homme devant le telephone qui essaye de ce connecter"
         />
-      </div>
+      </section>
     </main>
   </body>
 </html>
