--- a/exercice/02-portfolio/index.html
+++ b/exercice/02-portfolio/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href=""></a>Home</li>
-        <li><a href=""></a>About</li>
-        <li><a href=""></a>Contact</li>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
       </ul>
     </nav>
     <main>
@@ -20,35 +21,32 @@
           <h1>I'm <span>Yanis</span> a <span>Web Devaloper</span></h1>
         </div>
         <div>
-          <img
-            src="images/WhatsApp Image 2025-11-08 at 15.00.49_6eefa282.jpg"
-            alt="erreur d'affichage"
-          />
+          <img src="images/1.png" alt="erreur d'affichage" />
         </div>
       </section>
-      <section>
+      <section class="violet">
         <h1>My Services</h1>
         <p>
           this are the services i can provide to you, and i might help you in
         </p>
         <div>
           <div>
-            <img src="images/1.jpg" alt="" />
+            <img src="images/2.png" alt="" />
             <h2>Ui/Ux Design</h2>
           </div>
           <div>
-            <img src="images/2.jpg" alt="" />
+            <img src="images/3.png" alt="" />
             <h2>Backend apps</h2>
           </div>
           <div>
-            <img src="images/3.jpg" alt="" />
+            <img src="images/4.png" alt="" />
             <h2>Video Editing</h2>
           </div>
         </div>
       </section>
       <section>
         <div>
-          <img src="images/4.jpg" alt="" />
+          <img src="images/5.png" alt="" />
         </div>
         <div>
           <h2>Contact Me</h2>
